added cutom modal alert for winner, updated README

--- a/styles.css
+++ b/styles.css
@@ -12,16 +12,25 @@ h1 {
   color: rgb(255, 208, 0);
   text-shadow: 0.1em 0.1em black;
 }
+
+h4 {
+  text-align: left;
+  font-size: 2em;
+  color: rgb(255, 208, 0);
+  text-shadow: 0.1em 0.1em black;
+}
+
+
+.content{
+  display: block;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
 .controls {
   text-align: center;
   color: white;
-}
-
-.score {
-  font-size: 3em;
-  font-weight: 800;
-  align-content: center;
-  margin: 1em;
 }
 
 .controls #red{
@@ -48,6 +57,13 @@ h1 {
 .controls button:disabled {
   background-color: grey;
   cursor: not-allowed;
+}
+
+.score {
+  font-size: 3em;
+  font-weight: 800;
+  align-content: center;
+  margin: 1em;
 }
 
 .board {
@@ -78,4 +94,55 @@ h1 {
   background-color: red;
   border-radius: 50%;
   cursor: not-allowed;
+}
+
+
+.bg-modal{
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+
+.modal-content{
+  background: #333;
+  color: white;
+  margin: 10% auto; /* 1% from the top and centered */
+  padding: 20px;
+  width: 20%; /* Could be more or less, depending on screen size */
+  border-radius: 10px;
+  -webkit-animation: animatebottom 0.5s ease-out ;
+  animation: animatebottom 0.5s ease-out;
+}
+
+/* Add Animation */
+@-webkit-keyframes animatebottom {
+  from {transform: translateY(600px); opacity:0} 
+  to {transform: translateY(0px); opacity:1}
+}
+
+@keyframes animatebottom {
+  from {transform: translateY(600px);; opacity:0}
+  to {transform: translateY(0px); opacity:1}
+}
+
+.close {
+  color: white;
+  float: right;
+  font-size: 1em;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: rgb(201, 0, 0);
+  text-decoration: none;
+  cursor: pointer;
 }
